# python-rust-arrow

./: .gitignore  Cargo.toml  Makefile  Pipfile  build.rs  readme.md  setup.py
.cargo/: config.toml
c-code/src/: c_test.c
cython_code/: pcffi.c  pcffi.cpp  pcffi.py  setup.py  unwrap.cpp  unwrap.pyx
python/: c_data_interface.py  cli.py  generate_parquet_data.py  ipc.py
src/: lib.rs  main.rs
