[package]
name = "python-rust-arrow"
version = "0.1.0"
authors = ["niklas.molin <niklas.molin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arrowlab"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "arrowlab"
path = "src/main.rs"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
arrow = "1.0.0"
libc = "0.2.74"
cty = "*"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

[build-dependencies]
pkg-config = "0.3.15"